--- a/source/diploma.tex
+++ b/source/diploma.tex
@@ -176,7 +176,7 @@ aboveskip=10pt}
 
 \bibliography{mybib}
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliographystyle{plain}
+\bibliographystyle{apacite}
 
 \label{page:last}
 \end{document}
